# libasm

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: test_ci.yml
example/practice1/: Makefile  practice1.s
example/practice2/: Makefile  practice2.c  practice2.s
example/practice3/: Makefile
example/practice4/: Makefile  practice4.c
example/practice5/: Makefile  practice5.c  practice5.s
example/practice6/: Makefile  practice6.c  practice6.s
example/practice7/: Makefile  practice7.c  practice7.s
include/: libasm.h  libasm_bonus.h
poc/: .gitignore  practice3.c  practice3.s  practice4.s  practice5.s  practice6.s
src/: ft_atoi_base.s  ft_atoi_base_bonus.s  ft_read.s  ft_strcmp.s  ft_strcpy.s  ft_strdup.s  ft_strlen.s  ft_write.s
src/utils/: ft_isspace.s  ft_strchr.s  ft_strspn.s
tests/: CMakeLists.txt  test_ft_atoi_base.cpp  test_ft_isspace.cpp  test_ft_read.cpp  test_ft_strchr.cpp  test_ft_strcmp.cpp  test_ft_strcpy.cpp  test_ft_strdup.cpp  test_ft_strlen.cpp  test_ft_strspn.cpp  test_ft_write.cpp
